<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.05"
        android:text="Authorization"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="30sp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="85sp"
        android:layout_marginTop="35sp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="85sp"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/gray"
        android:text="@string/Sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:targetApi="lollipop" />
</LinearLayout>